--- a/auth/src/main/resources/bootstrap.yml
+++ b/auth/src/main/resources/bootstrap.yml
@@ -14,25 +14,21 @@ ribbon:
 
 ignore:
   urls:
-    - /info
-    - /health
-    - /env
-    - /metrics*
-    - /trace
-    - /dump
-    - /hystrix*
-    - /refresh
-    - /logfile
-    - /flyway
-    - /liquibase
-    - /heapdump
-    - /loggers
-    - /auditevents
-    - /jolokia/
-    - /jolokia
-    - /configprops
+    - /actuator/**
     - /css/**/*.*
     - /img/**/*.*
     - /js/**/*.*
     - /fonts/**/*.*
 
+logging:
+  config: classpath:logback-spring.xml
+  level:
+    org.springframework.security: debug
+    root: info
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        #exclude: []
