--- a/registry/src/main/resources/application-dev.yml
+++ b/registry/src/main/resources/application-dev.yml
@@ -20,8 +20,9 @@ eureka:
      prefer-ip-address: true                    #是否使用主机名来定义注册中心的地址  false：不使用
      instance-id: ${spring.cloud.client.ip-address}:${server.port}
      metadata-map:
-       user.name: ${security.user.name}
-       user.password: ${security.user.password}
+       user.name: ${spring.security.user.name}
+       user.password: ${spring.security.user.password}
+     health-check-url-path: /actuator/health
   client:
     #registerWithEureka: false                #默认是true，将自己注册到eureka上
     fetchRegistry: false                           #是否从eureka上获取信息，由于本案例是单机，无需从别的eureka上获取注册信息
@@ -29,5 +30,4 @@ eureka:
       defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@localhost:8761/eureka/
 
 logging:
-  config: classpath:logback-spring.xml
   path: applog
