--- a/getaway2/pom.xml
+++ b/getaway2/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mgr</artifactId>
-        <groupId>cn.zhangz.cloud.finchley</groupId>
+        <groupId>cn.zhangz.cloud.greenwich</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.zhangz.cloud.finchley</groupId>
+            <groupId>cn.zhangz.cloud.greenwich</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
