--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>cn.zhangz.cloud.finchley</groupId>
+    <groupId>cn.zhangz.cloud.greenwich</groupId>
     <artifactId>mgr</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
